# riscv-disassembler

./: CMakeLists.txt  Makefile  README.md
src/: riscv-disas.c  riscv-disas.h  test-decode.c  test-disas.c
tests/: minimal-test.s
